example-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
